# Buddy_API-FastAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  main01.py  main_BKP.py  pyproject.toml  teste01.py  teste02.py
deploy/: Dockerfile  main.py
