[tool.poetry]
name = "buddy-api"
version = "0.1.0"
description = ""
authors = ["Aldo Nunes <aldonunes001@gmail.com>"]
readme = "README.md"
packages = [{include = "buddy_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.99.1"}
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
